fixed images on mobile

--- a/transom/src/components/main/main.style.scss
+++ b/transom/src/components/main/main.style.scss
@@ -56,4 +56,10 @@
         text-decoration: underline;
         cursor: pointer;
     }
+
+    @media screen and (max-width:480px) {
+        button{
+            padding: 6px !important;
+        }
+    }
 }
